# ailedger

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: deploy.yml
.reviews/7nj42/: security-findings.md  test-quality-findings.md  wiring-findings.md
charter-repo-staging/: SETUP.md
dashboard/: wrangler.toml
dashboard/src/: formatDate.ts
detection/: README.md  pyproject.toml
detection/tests/: test_drift.py  test_parity.py  test_stubs.py
docs/: deploy-runbook.md
landing/: .gitignore  CHARTER-PAGE-STAGING.md  index.html  package-lock.json  package.json  seo.config.json  wrangler.toml
landing/public/: charter.html  robots.txt  sitemap.xml
landing/scripts/: build-charter.mjs  charter-template.html  seo.mjs
landing/src/: App.tsx  HiringPage.css  HiringPage.tsx
monitoring/: README.md  pyproject.toml
monitoring/src/grafana_ailedger/: __init__.py  client.py  dashboard.py  panels.py
monitoring/tests/: conftest.py  test_dashboard.py  test_panels.py  test_schema.py
proxy/: package-lock.json  package.json  wrangler.jsonc
proxy/docs/: CODE-REVIEW-NOTES.md
proxy/migrations/: 20260508_chain_monitor.sql  20260512_decision_type_taxonomy_seed.sql  20260518_api_keys_tenant_id.sql  20260518_grafana_reader_role.sql  20260519_verify_chain_honor_disclosures.sql  CHECK-v2-applied.sql  V2-SCHEMA-NOTES.md
proxy/src/: index.ts
proxy/test/: durable-buffer.spec.ts
redirect/: package-lock.json  package.json  wrangler.jsonc
sdk/: README.md  package-lock.json  package.json
sdk/scripts/: smoke-test.ts
sdk/src/: client.ts  errors.ts  index.ts
(+31 files in other folders)
